--- a/tests/PyzTest/Zed/AclEntity/codeception.yml
+++ b/tests/PyzTest/Zed/AclEntity/codeception.yml
@@ -34,3 +34,5 @@ suites:
                 - \SprykerTest\Shared\Testify\Helper\DataCleanupHelper
                 - \SprykerTest\Zed\Testify\Helper\Business\BusinessHelper
                 - \SprykerTest\Shared\Testify\Helper\DependencyHelper
+                - \SprykerTest\Zed\Category\Helper\CategoryHelper
+                - \SprykerTest\Shared\MerchantCategory\Helper\MerchantCategoryHelper
